# financial_simulations

./: README.md  firesim.py  noxfile.py  pyproject.toml  simulation.py
data/: acwi_monthly_simulation.csv  inflation_PLN.csv  monthly_cpi_simulated_PLN.csv  monthly_cpi_simulated_USD.csv  poland_monthly_cpi.csv
docs/: firesim_intro_en.md  firesim_intro_pl.md
locale/: base.pot
locale/en_US/LC_MESSAGES/: messages.mo  messages.po
locale/pl_PL/LC_MESSAGES/: messages.mo  messages.po
notebooks/: fire.ipynb  inflation.ipynb  inflation_pl.ipynb  inflation_us.ipynb  no_income_simpulation.ipynb  no_income_simulation.ipynb  steady_income_properties.ipynb  stocks-etf.ipynb
src/finsim/: inflation.py  mortgage.py  properties.py  simulations.py
src/fire/: inflation.py  properties.py  simulations.py  test_inflation.py  test_mortgage.py  test_simulations.py
src/view/: conf.py  helpers.py  locale.py  sidebar.py  sidebar_conf.py
test/: test_inflation.py  test_mortgage.py  test_simulations.py
test/integration/: test_firesim.py  test_simulation.py
