[tool.poetry]
name = "fire-notebooks"
version = "0.1.0"
description = ""
authors = ["Michal Wrobel <sparrovv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
pandas = "^2.2.1"
plotly = "^5.20.0"
streamlit = "^1.32.2"
yfinance = "^0.2.38"
babel = "^2.14.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
mypy = "^1.9.0"
nbval = "^0.11.0"
statsmodels = "^0.14.1"
scikit-learn = "^1.4.2"
pandas-datareader = "^0.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]